apps/base/tool-syncthing/deploy/syncthing/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: syncthing
      app.kubernetes.io/component: syncthing
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncthing
        app.kubernetes.io/component: syncthing
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # username
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: syncthing
        image: "registry.lan/syncthing:2.1.5"
        ports:
        - containerPort: 8384
          name: web
        - name: transfer-tcp
          containerPort: 22000
          protocol: TCP
        #- name: transfer-udp
        #  containerPort: 22000
        #  protocol: UDP
        - containerPort: 21027
          name: discovery
          protocol: UDP
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: web
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: syncthing-data
          mountPath: /var/syncthing/config
          subPath: config
        - name: syncthing-volume
          mountPath: /data
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: syncthing-data
        persistentVolumeClaim:
          claimName: syncthing-data
      - name: syncthing-volume
        persistentVolumeClaim:
          claimName: nfs-syncthing
      - name: cluster-ca-volume
        secret:
          secretName: cluster-ca
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
