apps/base/tool-syncthing/deploy/syncthing/service-sync-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-sync-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing-sync
spec:
  type: LoadBalancer
  loadBalancerIP: 1.2.3.4
  externalTrafficPolicy: Local
  ports:
    - name: transfer-tcp
      port: 22000
      targetPort: transfer-tcp
      protocol: TCP
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/component: syncthing
