apps/base/tool-syncthing/deploy/syncthing/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web
spec:
  ports:
  - port: 8384
    name: web
    targetPort: web
  selector:
    app.kubernetes.io/name: syncthing
    app.kubernetes.io/component: syncthing
